tests/src/frontend/expand/invalid/extension_class4.sk
class A(Int)
extension class A(Int)
